--- a/metadata.yaml
+++ b/metadata.yaml
@@ -37,5 +37,6 @@ subjects:
 - !lcsh 'France -- Politics and government -- 1789-1900'
 - !lcc 'PN'
 - !lcsh 'Literature -- History and criticism'
+- GITenberg
 title: Cours familier de Littérature - Volume 11
 url: http://www.gutenberg.org/ebooks/38736
